--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -1,13 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:padding="24dp"/>
+        android:padding="24dp"
+        android:textAlignment="center"
+        tools:text="Question Goes Here" />
 
     <LinearLayout
         style="?android:attr/buttonBarStyle"
@@ -31,22 +36,30 @@
             android:text="@string/false_button" />
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/prev_button"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        style="?android:attr/buttonBarStyle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
-        android:contentDescription="@string/previous"
-        android:src="@drawable/arrow_left" />
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal">
 
-    <ImageButton
-        android:id="@+id/next_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:contentDescription="@string/next"
-        android:text="@string/next_button"
-        android:src="@drawable/arrow_right"
-        android:drawablePadding="4dp"/>
+        <ImageButton
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|start"
+            android:contentDescription="@string/previous"
+            android:src="@drawable/arrow_left" />
 
-</FrameLayout>
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:contentDescription="@string/next"
+            android:drawablePadding="4dp"
+            android:src="@drawable/arrow_right"
+            android:text="@string/next_button" />
+    </LinearLayout>
+
+</LinearLayout>
